--- a/pom.xml
+++ b/pom.xml
@@ -55,7 +55,7 @@
                     <!-- Suite testng xml file to consider for test execution -->
                     <suiteXmlFiles>
                         <suiteXmlFile>regrassionMercury.xml</suiteXmlFile>
-                      
+                      	<suiteXmlFile>smokeMercury.xml</suiteXmlFile>
                     </suiteXmlFiles>
                 </configuration>
             </plugin>
